[package]
name = "leetcode_rust"
version = "0.1.0"
authors = ["ducduyn31 <ducduy.ababat@gmail.com>"]
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = "1.0.210"
serde_json = "1.0.128"
serde_derive = "1.0.210"
rand = "0.8.5"
regex = "1.10.6"
futures = {  version = "0.3.30", features = ["thread-pool"] }
surf = "2.3.2"

[lib]
doctest = false
test = true
